chang dir footer

--- a/src/resources/views/layouts/main.handlebars
+++ b/src/resources/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
 <body>
     {{> page/nav}}
     {{{body}}}
-    {{> footer}}
+    {{> page/footer}}
     <script src="js/jquery-3.3.1.min.js"></script>
     <!-- https://jquery.com/download/ -->
     <script src="js/moment.min.js"></script>
